--- a/index.html
+++ b/index.html
@@ -51,27 +51,17 @@
 		
 		<section>
 			<div class="sectionTitle">
-				<h1>Work Experience</h1>
+				<h1>Previous Projects</h1>
 			</div>
 			
 			<div class="sectionContent">
 				<article>
-					<h2>Job Title at Company</h2>
-					<p class="subDetails">April 2011 - Present</p>
-					<p>Level 10</p>
+					<h2>BSU- Capstone Project</h2>
+					<p class="subDetails">August 2019 - April 2020</p>
+					<p>A mobil app for Accutech, designed to replicate key management functions in their primary trust management software.</p>
+					<p>Project Repository: <a href="https://github.com/nabartling/TrustAdministrationMobileAppcode">Trust Administration Mobile Appcode</p>
 				</article>
-				
-				<article>
-					<h2>Job Title at Company</h2>
-					<p class="subDetails">Janruary 2007 - March 2011</p>
-					<p>Level 9</p>
-				</article>
-				
-				<article>
-					<h2>Job Title at Company</h2>
-					<p class="subDetails">October 2004 - December 2006</p>
-					<p>Level 8</p>
-				</article>
+
 			</div>
 			<div class="clear"></div>
 		</section>
