--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		
 		<div id="contactDetails" class="quickFade delayFour">
 			<ul>
-				<li>email: <a href="mailto:joe@bloggs.com" target="_blank">deellery@gmail.com</a></li>
+				<li>email: <a href="mailto:deellery@gmail.com" target="_blank">deellery@gmail.com</a></li>
 			</ul>
 		</div>
 		<div class="clear"></div>
@@ -59,7 +59,7 @@
 					<h2>BSU- Capstone Project</h2>
 					<p class="subDetails">August 2019 - April 2020</p>
 					<p>A mobil app for Accutech, designed to replicate key management functions in their primary trust management software.</p>
-					<p>Project Repository: <a href="https://github.com/nabartling/TrustAdministrationMobileAppcode">Trust Administration Mobile Appcode</p>
+					<p>Project Repository: <a href="https://github.com/nabartling/TrustAdministrationMobileAppcode">Trust Administration Mobile Appcode</a></p>
 				</article>
 
 			</div>
