--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				</div>
 				
 				<div class="sectionContent">
-					<p>Filler</p>
+					<p>A computer scientist familiar with a wide range of professions, including engineering and IT work. Proficient in many other disciplines, such as teaching and athletic training. Licensed for commerical drone flying.
 				</div>
 			</article>
 			<div class="clear"></div>
