--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
 					<p class="subDetails">November 2018 - March 2019</p>
 					<p>A simple numbers card game with a bot that has 3 difficulties. The easy bot chooses cards at random, the medium bot plays the strongest card it can each round, and the hard bot uses its weakest cards until it starts losing, then uses its strongest cards after the player has presumably used all their strongest cards.</p>
 					<p>Project Repository: Cardinal Cards (repository lost)</p>
+				</article>			
+				<article>
+					<h2>BSU - Untitled Rhythm Game</h2>
+					<p class="subDetails">January 2020 - April 2020</p>
+					<p>A mobile rhythm deck-building game ideated and built in the span of four months. Basic gameplay is arranging the cards in your hand to arrange the rhythm you play. Your cards intensity depend on your rhythm performance.</p>
+					<p>Project Repository: <a href="https://github.com/MatthewRhi/TitlePending">Cardinal Cards</a></p>
 				</article>
 
 			</div>
