--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					<h2>BSU - Untitled Rhythm Game</h2>
 					<p class="subDetails">January 2020 - April 2020</p>
 					<p>A mobile rhythm deck-building game ideated and built in the span of four months. Basic gameplay is arranging the cards in your hand to arrange the rhythm you play. Your cards intensity depend on your rhythm performance.</p>
-					<p>Project Repository: <a href="https://github.com/MatthewRhi/TitlePending">Cardinal Cards</a></p>
+					<p>Project Repository: <a href="https://github.com/MatthewRhi/TitlePending">Untitled Rhythm Game</a></p>
 				</article>
 
 			</div>
